Replace Class.newInstance() with Constructor.newInstance()